--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/types": "^7.22.5",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.196",
     "@types/node": "^18.17.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.32.7",
@@ -23,6 +24,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "vue": "^3.3.4"
   }
 }
