--- a/vue/package.json
+++ b/vue/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
-    "build": "tsc && vite build --mode server && vite build --mode client && sass styles:dist/public",
+    "build": "sass styles:../wwwroot/css && vite build",
     "dev": "vite"
   },
   "author": "",
@@ -13,7 +13,6 @@
   "devDependencies": {
     "@babel/types": "^7.22.5",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.196",
     "@types/node": "^18.17.0",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -23,7 +22,6 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "lodash": "^4.17.21",
     "vue": "^3.3.4"
   }
